# MANGOspaceG4

./: .gitignore  CMakeLists.txt  README.md  exampleB3a.cc  main.cc  myMac.mac
analysis/: ConvertForDigi.cpp  ConvertForDigi_withSelection.cpp  FullCdTeSpectrum_INAF_Nov24.txt  RecoTrack.C  RecoTrack_faster.C  checkDigi.py  convert  efficicency.py  efficiency.py  generateSpectrum.py  spectrum.txt  splitRootFile.C
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  G4LivermorePolarizedPhotoElectricGDModel.hh  GasBoxSensitiveDetector.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackInfo.hh  TrackingAction.hh
macros/: myMacro.mac  ui copy.mac  ui.mac
spectra/: 55Fe.txt  Ag.txt  Cu.txt  Mo.txt  Rb.txt
spectra/Background/: CXB.csv  Neutron_albedo.csv  Photon_albedo.csv  Primary_alpha.csv  Primary_electrons.csv  Primary_positrons.csv  Primary_protons.csv  Secondary_electrons.csv  Secondary_positrons.csv  Secondary_proton.csv  component_weights.txt  compute_component_weights.py
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  G4LivermorePolarizedPhotoElectricGDModel.cc  GasBoxSensitiveDetector.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessanger.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
